[tool.poetry]
name = "uni-practice"
version = "0.1.0"
description = ""
authors = ["Artyom Sosedka <m1801239@edu.misis.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
torch-geometric = "^2.3.1"
pandas = "^2.1.0"
numpy = "^1.25.2"
black = "^23.7.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
